--- a/config.env
+++ b/config.env
@@ -24,10 +24,10 @@ FSUB_IDS = "-1002073538328"
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = "1-w2cP5B_TO-0T-a_1gf91XMFizXV8Nzj"
+GDRIVE_ID = "19tgpFQc4_ejEMlqDP6ekPCDk7ecqfN3G"
 USER_TD_MODE = ""
 USER_TD_SA = ""
-INDEX_URL = ""
+INDEX_URL = "https://shweta.9007.workers.dev/3:/lifetime%20clone%20bot"
 USE_SERVICE_ACCOUNTS = "True"
 IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "True"
@@ -60,13 +60,13 @@ AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 CAP_FONT = "code"
-LEECH_FILENAME_PREFIX = ""
-LEECH_FILENAME_SUFFIX = ""
-LEECH_FILENAME_CAPTION = ""
-LEECH_FILENAME_REMNAME = ""
-MIRROR_FILENAME_PREFIX = ""
-MIRROR_FILENAME_SUFFIX = ""
-MIRROR_FILENAME_REMNAME = ""
+LEECH_FILENAME_PREFIX = "  @LifetimeCloneBOT  "
+LEECH_FILENAME_SUFFIX = "  @LifetimeCloneBOT  "
+LEECH_FILENAME_CAPTION = " @LifetimeCloneBOT  "
+LEECH_FILENAME_REMNAME = " @LifetimeCloneBOT  "
+MIRROR_FILENAME_PREFIX = " @LifetimeCloneBOT  "
+MIRROR_FILENAME_SUFFIX = " @LifetimeCloneBOT  "
+MIRROR_FILENAME_REMNAME = " @LifetimeCloneBOT "
 
 # Log Channel/SuperGroup (Topics Support)
 LEECH_LOG_ID = "-1002097062462"
