--- a/config.env
+++ b/config.env
@@ -75,7 +75,7 @@ LINKS_LOG_ID = "-1002097062462"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "https://yumiko777777-team9007.koyeb.app"
+BASE_URL = "https://clone-87464345-67c2148238d0.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
