--- a/config.env
+++ b/config.env
@@ -1,15 +1,15 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6758663096:AAE9i8fNe412kcRTiVXTVWd_hsflSK6obN0"                              # Require restart after changing it while bot running
+BOT_TOKEN = "6688464128:AAGMPTVuBVbYhl2EpeFhZ563O2eBN9vsifk"                              # Require restart after changing it while bot running
 OWNER_ID = "6277208201"                               # Require restart after changing it while bot running
-TELEGRAM_API = "23933803"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "3e0929db8bcab1c064fc8ebb3c44fbf2"                          # Require restart after changing it while bot running
+TELEGRAM_API = "25101360"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "136cc2036074e0c1db3c2f3070e3cd7d"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = "mongodb+srv://Adult9007:Adult9007@cluster0.pkukbgh.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = "-1001843302575"                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1002034889790"                       # Require restart after changing it while bot running
 SUDO_USERS = "625036670 6004363830 6706725498 5572938538"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
@@ -17,22 +17,22 @@ DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
 INCOMPLETE_TASK_NOTIFIER = "False"
-SET_COMMANDS = "False"
+SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
 FSUB_IDS = "-1002073538328"
 BOT_PM = ""
 
 # GDrive Tools
-GDRIVE_ID = "19tgpFQc4_ejEMlqDP6ekPCDk7ecqfN3G"
+GDRIVE_ID = "13iqwDCM-9wT9prgJiBwRQdRtt42W6HvW"
 USER_TD_MODE = ""
 USER_TD_SA = ""
-INDEX_URL = "https://shweta.9007.workers.dev/3:/lifetime%20clone%20bot"
+INDEX_URL = "https://shweta.link/3:/Forever%20Friends"
 USE_SERVICE_ACCOUNTS = "True"
 IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "True"
 DISABLE_DRIVE_LINK = "False"
-GD_INFO = "TG:- @QueenMirrorOfficial"
+GD_INFO = "FRIENDS FOREVER"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
@@ -117,14 +117,14 @@ MDL_TEMPLATE = ""
 # Telegraph
 TITLE_NAME = "it'Shweta"
 AUTHOR_NAME = "@shweta_9007"
-AUTHOR_URL = "https://t.me/QueenMirrorOfficial"
+AUTHOR_URL = ""
 COVER_IMAGE = ""
 
 # Extra
 SAFE_MODE = ""
 DELETE_LINKS = ""
 CLEAN_LOG_MSG = ""
-SHOW_EXTRA_CMDS = ""
+SHOW_EXTRA_CMDS = "True"
 TIMEZONE = "Asia/Kolkata"
 IMAGES = ""
 IMG_SEARCH = ""
@@ -134,8 +134,8 @@ EXCEP_CHATS = ""
 
 # M/L Buttons
 SCREENSHOTS_MODE = "False"
-SHOW_MEDIAINFO = "False"
-SAVE_MSG = "False"
+SHOW_MEDIAINFO = "True"
+SAVE_MSG = "True"
 SOURCE_LINK = "False"
 
 # Token system
