--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
-INCOMPLETE_TASK_NOTIFIER = "False"
+INCOMPLETE_TASK_NOTIFIER = "True"
 SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
@@ -60,22 +60,22 @@ AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 CAP_FONT = "code"
-LEECH_FILENAME_PREFIX = "  @LifetimeCloneBOT  "
-LEECH_FILENAME_SUFFIX = "  @LifetimeCloneBOT  "
-LEECH_FILENAME_CAPTION = " @LifetimeCloneBOT  "
-LEECH_FILENAME_REMNAME = " @LifetimeCloneBOT  "
-MIRROR_FILENAME_PREFIX = " @LifetimeCloneBOT  "
-MIRROR_FILENAME_SUFFIX = " @LifetimeCloneBOT  "
-MIRROR_FILENAME_REMNAME = " @LifetimeCloneBOT "
+LEECH_FILENAME_PREFIX = ""
+LEECH_FILENAME_SUFFIX = ""
+LEECH_FILENAME_CAPTION = ""
+LEECH_FILENAME_REMNAME = ""
+MIRROR_FILENAME_PREFIX = ""
+MIRROR_FILENAME_SUFFIX = ""
+MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = "-1002097062462"
-MIRROR_LOG_ID = "-1002097062462"
-LINKS_LOG_ID = "-1002097062462"
+LEECH_LOG_ID = "-1001570106385"
+MIRROR_LOG_ID = "-1001570106385"
+LINKS_LOG_ID = "-1001570106385"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "https://shwetaclonebot-team9007.koyeb.app/"
+BASE_URL = "https://friendsforever99-879df77e40f5.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
