--- a/config.env
+++ b/config.env
@@ -126,10 +126,10 @@ DELETE_LINKS = ""
 CLEAN_LOG_MSG = ""
 SHOW_EXTRA_CMDS = "True"
 TIMEZONE = "Asia/Kolkata"
-IMAGES = ""
+IMAGES = "https://graph.org/file/9e67a5251e3e8cb443730.png"
 IMG_SEARCH = ""
 IMG_PAGE = ""
-BOT_THEME = "team9007"
+BOT_THEME = "minimal"
 EXCEP_CHATS = ""
 
 # M/L Buttons
