--- a/config.env
+++ b/config.env
@@ -21,7 +21,7 @@ SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
 FSUB_IDS = "-1002073538328"
-BOT_PM = ""
+BOT_PM = "True"
 
 # GDrive Tools
 GDRIVE_ID = "13iqwDCM-9wT9prgJiBwRQdRtt42W6HvW"
@@ -129,7 +129,7 @@ TIMEZONE = "Asia/Kolkata"
 IMAGES = "https://graph.org/file/9e67a5251e3e8cb443730.png"
 IMG_SEARCH = ""
 IMG_PAGE = ""
-BOT_THEME = "minimal"
+BOT_THEME = "shweta"
 EXCEP_CHATS = ""
 
 # M/L Buttons
