--- a/config.env
+++ b/config.env
@@ -24,10 +24,10 @@ FSUB_IDS = "-1002073538328"
 BOT_PM = "True"
 
 # GDrive Tools
-GDRIVE_ID = "13iqwDCM-9wT9prgJiBwRQdRtt42W6HvW"
+GDRIVE_ID = "1O8vhCHcYaX61vjepj5dhCQDEKxBZ8OHC"
 USER_TD_MODE = ""
 USER_TD_SA = ""
-INDEX_URL = "https://shweta.link/3:/Forever%20Friends"
+INDEX_URL = "https://shweta.9007.workers.dev/4:/Friend%20Forever%20Group%20Bot%20/"
 USE_SERVICE_ACCOUNTS = "True"
 IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "True"
