--- a/config.env
+++ b/config.env
@@ -24,10 +24,10 @@ FSUB_IDS = "-1002073538328"
 BOT_PM = "True"
 
 # GDrive Tools
-GDRIVE_ID = "1-wp5IChp_YkJ8AjSwWvoX9fENYW1fEs0"
+GDRIVE_ID = "1-x1bvNeOZSzr1KDkImiThwYQX-wsQJK3"
 USER_TD_MODE = ""
 USER_TD_SA = ""
-INDEX_URL = "https://shweta.9007.workers.dev/4:/Friend%20Forever%20Group%20Bot%20/"
+INDEX_URL = "https://shweta.9007.workers.dev/4:/Premium%20Friends%20(BOTS)"
 USE_SERVICE_ACCOUNTS = "True"
 IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "True"
