--- a/config.env
+++ b/config.env
@@ -50,7 +50,7 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/Bhaavana-Official/WZML-X"
+UPSTREAM_REPO = "https://github.com/shweta9007/WZML-X"
 UPSTREAM_BRANCH = "hk_wzmlx"
 UPGRADE_PACKAGES = ""
 
