--- a/config.env
+++ b/config.env
@@ -24,10 +24,10 @@ FSUB_IDS = "-1002073538328"
 BOT_PM = "True"
 
 # GDrive Tools
-GDRIVE_ID = "1-x1bvNeOZSzr1KDkImiThwYQX-wsQJK3"
+GDRIVE_ID = "18ys55OecGTkJUU66c0sIu5f9kil1l-Ux"
 USER_TD_MODE = ""
 USER_TD_SA = ""
-INDEX_URL = "https://shweta.9007.workers.dev/4:/Premium%20Friends%20(BOTS)"
+INDEX_URL = "https://shweta.9007.workers.dev/4:/Queen%20all"
 USE_SERVICE_ACCOUNTS = "True"
 IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "True"
