--- a/config.env
+++ b/config.env
@@ -75,7 +75,7 @@ LINKS_LOG_ID = "-1001570106385"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "https://friend-bot11-27ca1395b73f.herokuapp.com/"
+BASE_URL = "https://frind9-d1c09860e897.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
