--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ TELEGRAM_HASH = "368c464c22f8db4bd452f66d43888dcb"                          # Re
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = "mongodb+srv://Adult9007:Adult9007@cluster0.pkukbgh.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
+CMD_SUFFIX = "2"                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = "-1002034889790"                       # Require restart after changing it while bot running
 SUDO_USERS = "625036670 6004363830 6706725498 5572938538"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
@@ -75,7 +75,7 @@ LINKS_LOG_ID = "-1001570106385"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "https://speedtestbot9-90a2fcb1161f.herokuapp.com/"
+BASE_URL = "https://speedtetsbotrajan-95f8eb00916a.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
@@ -129,7 +129,7 @@ TIMEZONE = "Asia/Kolkata"
 IMAGES = "https://graph.org/file/9e67a5251e3e8cb443730.png"
 IMG_SEARCH = ""
 IMG_PAGE = ""
-BOT_THEME = ""
+BOT_THEME = "shweta"
 EXCEP_CHATS = ""
 
 # M/L Buttons
